--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
+    "jquery": "^3.7.1",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
